--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -869,11 +869,12 @@ rule revTrans:
 
 rule evolveAGene:
     input:
-        "coding_sequences/{header}.cds"
+        cds="coding_sequences/{header}.cds",
+        seq="sequences/{header}.seq"
     output:
         "coding_sequences/{header}_pep_Unaligned.FASTA"
     shell:
-        "EvolveAGene -f  {input}   -n 8 -o Phy -b 0.04"
+        "EvolveAGene -f  {input.cds}   -n 8 -o Phy -b 0.04 ||( head -n 1  {input.seq}  && tail -n 1 {input.seq} |awk '{print "M"$1"*"}' > {output})"
 rule cleanSeq:
     input:
         "coding_sequences/{header}_pep_Unaligned.FASTA"
