--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -640,6 +640,7 @@ rule blast2fa:
             qdict[headerStr] = seq
 
         used_dict = {}
+        print(used_dict)
 
         with open(input[0]) as f:
             for line in f:
