--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -980,7 +980,7 @@ rule Raptorx:
     output:
         "{header}.seq.dumb/{header}/{header}.all"
     shell:
-        "bash {config[Raptorx_dir]}/oneline_command.sh {input.seq} 64 0 && echo too_small > {output}"
+        "bash {config[Raptorx_dir]}/oneline_command.sh {input.seq} 64 0 || echo too_small > {output}"
 rule ssComp:
     input:
         dynamic("{header}.seq.dumb/{header}/{header}.all")
