--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -1045,7 +1045,7 @@ rule combineFiles:
 
 
         all_combined = pd.concat(df_dict)
-        all_combined.to_csv(output[0],,na_rep='nan', sep='\t', index=False,quoting=3)
+        all_combined.to_csv(output[0],na_rep='nan', sep='\t', index=False,quoting=3)
         # "touch {output}"
 
 
