--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -1042,11 +1042,15 @@ rule combineFiles:
             currentHeaders = list(currentData)
             newHeaders = ["N:feature_" + str(header) for header in currentHeaders]
             currentData.columns = newHeaders
+            currentData.to_csv(df_name.split(".")[1]+".tsv",na_rep='nan', sep='\t', index=False,quoting=3)
+            currentData = currentData.drop('N:feature_0', 1)
             df_dict[df_name] = currentData
             print(currentData.shape)
 
 
         all_combined = pd.concat(df_dict,axis=1)
+        newHeaders = ["N:feature_" + str(header) for header in currentHeaders]
+        all_combined.columns = newHeaders
         print(all_combined.shape)
         all_combined.to_csv(output[0],na_rep='nan', sep='\t', index=False,quoting=3)
         # "touch {output}"
