--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -1049,7 +1049,8 @@ rule combineFiles:
 
 
         all_combined = pd.concat(df_dict,axis=1)
-        newHeaders = ["N:feature_" + str(header) for header in currentHeaders]
+        currentHeaders = list(all_combined)
+        newHeaders = ["N:feature_" + str(header) for header in range(len(currentHeaders))]
         all_combined.columns = newHeaders
         print(all_combined.shape)
         all_combined.to_csv(output[0],na_rep='nan', sep='\t', index=False,quoting=3)
